@@ -20,6 +20,7 @@
 - Added purge logs functionality in maintenance
 - Fixed bug about importing lesson with glossary terms
 - Fixed issue with php.ini when it exists in www folder by copying it to install folder
+- Fixed issue about displaying all tests in reports for a multi-roled user
 
 === Version 3.6.2 build 6550 ===
 - Added new automatic importing functionality
